# OpenGL-Default-Template

./: CMakeLists.txt
include/: Camera.h  EBO.h  Shader.h  Texture.h  VAO.h  VBO.h
libraries/glfw/include/GLFW/: glfw3.h  glfw3native.h
libraries/stb_images/include/: stb_image.h
shaders/: default.frag  default.vert  fragment.frag
src/: Camera.cpp  EBO.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp
